# A_Proxy_From_Url_J

./: YourActivity.java  build.gradle  gradlew  gradlew.bat  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  trojan_jni.cpp  trojan_jni.h  utils.cpp  xray_jni.cpp  xray_jni.h
app/src/main/cpp/include/: utils.h  xray_core.h  xray_jni.h
app/src/main/java/com/example/proxyclient/: Constants.java  MainActivity.java
app/src/main/java/com/example/proxyclient/activity/: LinkInputActivity.java
app/src/main/java/com/example/proxyclient/adapter/: ServerListAdapter.java  TrojanConfigAdapter.java
app/src/main/java/com/example/proxyclient/database/: AppDatabase.java  TrojanConfigDao.java  TrojanConfigDatabase.java  XrayConfigDao.java
app/src/main/java/com/example/proxyclient/manager/: ConfigManager.java
app/src/main/java/com/example/proxyclient/model/: TrojanConfig.java  TrojanNode.java  XrayConfig.java
app/src/main/java/com/example/proxyclient/proxy/: ProxySocks5Handler.java
app/src/main/java/com/example/proxyclient/service/: ProxyVpnService.java  TrojanService.java  VpnTileService.java  XrayService.java
app/src/main/java/com/example/proxyclient/subscription/: SubscriptionManager.java
app/src/main/java/com/example/proxyclient/utils/: NetworkUtils.java
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml  ic_radio_unselected.xml  ic_vpn.xml  item_background_selector.xml
app/src/main/res/layout/: activity_link_input.xml  activity_main.xml  item_trojan_config.xml
app/src/main/res/values/: dimens.xml  shape.xml  strings.xml  themes.xml
res/drawable/: normal_item_background.xml  selected_item_background.xml
res/layout/: item_trojan_config.xml
